...
                    timestamp = System.currentTimeMillis()
                )
                database.planDao.insert(plan)

                val session = Session(
                    planId = 1,
                    sessionName = "Training A",
                    sessionDescription = "Desc of training A",
                )
                val sessionB = Session(
                    planId = 1,
                    sessionName = "Training B",
                    sessionDescription = "Desc of training A",
...
                    sessionId = 1,
                    exerciseName = "Deadlift",
                    exerciseDescription = "5 sets, 5 reps"
                )
                val exerciseB = Exercise(
                    sessionId = 1,
                    exerciseName = "Bench Press",
                    exerciseDescription = "5 sets, 5 reps"
                )
                val exerciseC = Exercise(
                    sessionId = 1,
                    exerciseName = "Barbell Row",
                    exerciseDescription = "5 sets, 5 reps"
...
